# nano_geo_matrix

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
include/nano_geo_matrix/bessel/: THIRD_PARTY_NOTICES.md  bessel-library.hpp  myBessel.hpp  myBessel_bl.hpp  myBessel_special.hpp
include/nano_geo_matrix/cup/: cup.hpp  materials.hpp
include/nano_geo_matrix/cup/mie/: frohlich.hpp  solvers.hpp
include/nano_geo_matrix/mie/geometry/: single.hpp
include/nano_geo_matrix/quasi_static/geometry/: nanoshell.hpp  single.hpp
include/nano_geo_matrix/quasi_static/spaser/: nanoshell_intensity_steady_state.hpp
modules/cup/: cup.hpp  materials.hpp
modules/cup/mie/: frohlich.hpp  mie_extras.tpp  solvers.hpp
modules/cup/quasi_static/: frohlich.hpp  solvers.hpp
tests/: CMakeLists.txt  cup_mie_module_smoke.cpp  cup_mie_smoke.cpp  cup_qs_module_smoke.cpp  cup_qs_smoke.cpp  dielectric_database_test.cpp  metal_database_test  metal_database_test.cpp  smoke_mie_s.cpp  smoke_qs_ns.cpp  smoke_qs_s.cpp
